[style] Fix Header css align center

--- a/src/components/common/Header/Header.css
+++ b/src/components/common/Header/Header.css
@@ -3,6 +3,7 @@
   color: white;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: 12px;
   height: 50px;
 }
@@ -11,11 +12,14 @@
   display: flex;
   align-items: center;
   gap: 10px;
+  flex: 1;
 }
 
 .right-section {
   display: flex;
   align-items: center;
+  flex: 1;
+  justify-content: flex-end;
 }
 
 .back-button {
@@ -42,6 +46,8 @@
 .title {
   font-size: 24px;
   font-weight: bold;
+  flex: 2;
+  text-align: center;
 }
 
 .menu-btn {
